k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: inotes
  labels:
    app.kubernetes.io/name: inotes
