k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inotes-backend

spec:
  replicas: 1

  selector:
    matchLabels:
      app: inotes-backend

  template:
    metadata:
      labels:
        app: inotes-backend

    spec:
      containers:
        - name: inotes-backend
          image: 940401725141.dkr.ecr.ap-south-1.amazonaws.com/inotes-backend:latest

          ports:
            - containerPort: 5500
