k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inotes-api
  namespace: inotes
  labels:
    app: inotes-api
spec:
  type: ClusterIP
  selector:
    app: inotes-api
  ports:
    - name: http
      port: 80
      targetPort: 5500
