k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inotes-backend-service
spec:
  selector:
    app: inotes-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5500
  type: LoadBalancer
