k8s/frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: inotes-frontend-service

spec:
  selector:
    app: inotes-frontend

  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000

  type: LoadBalancer
